--- a/css/styles.css
+++ b/css/styles.css
@@ -171,10 +171,59 @@ a:hover{
     color: #3E4E5E; /* Gris azulado oscuro */
 }
 
+/* Recetas css */
+/* Estilo para las tarjetas */
+.card {
+    text-align: center;
+    margin: 15px;
+    cursor: pointer;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
 
+.card img {
+    width: 100%;
+    height: auto;
+    display: block;
+    border-bottom: 1px solid #ddd;
+}
 
+.card p {
+    padding: 10px;
+    font-size: 16px;
+}
 
+.card a {
+    text-decoration: none;
+    color: inherit;
+}
 
+/* Estilo para el modal */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+}
 
+/* Mostrar el modal cuando se activa con :target */
+.modal:target {
+    display: flex;
+}
 
-
+/* Contenido del modal */
+.modal-content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    width: 80%;
+    max-width: 500
+}
